package restaurant.components;

/**
 * Component interface for all food items. 
 */
public interface FoodItem {
    double getCost();
    String getDescription();
}
