// package restaurant.components;

// /**
//  * Concrete food item: Fries with base price.
//  */
// public class Fries implements FoodItem {

// }
