// package restaurant.components;

// /**
//  * Concrete food item: Hot Dog with base price.
//  */
// public class HotDog implements FoodItem {

// }
