package restaurant.loyalty;

/**
 * Represents customer loyalty status and applies discounts.
 * Different loyalty levels provide different discount percentages.
 */
public class LoyaltyDiscount {

}
