package restaurant.order;

import restaurant.FoodItem;

/**
 * Represents a customer's order.
 * Manages a list of food items and calculates the total cost.
 */
public class Order {

}
