package restaurant.toppings;

/**
 * Concrete decorator: Adds cheese topping to a food item.
 */
public class Cheese extends ToppingDecorator {

}
