package restaurant.toppings;

/**
 * Concrete decorator: Adds ketchup topping to a food item.
 */
public class Ketchup extends ToppingDecorator {

}
