package restaurant.toppings;

/**
 * Concrete decorator: Adds onions topping to a food item.
 */
public class Onions extends ToppingDecorator {

}
