package restaurant.toppings;

import restaurant.FoodItem;

/**
 * Abstract decorator class for toppings.
 * Wraps a FoodItem and adds topping cost to the base item.
 */
public abstract class ToppingDecorator implements FoodItem {

}
